mobile page start

--- a/app/index.html
+++ b/app/index.html
@@ -385,16 +385,27 @@
         </div>
         <!-- /site__content-layout -->
 
-    </div><!-- /site__content -->
+    </div>
+    <!-- /site__content -->
 
     <footer class="site__footer">
 
-
+        <!-- site__footer-layout -->
         <div class="site__footer-layout">
 
-        </div><!-- /site__footer-layout -->
+            <!-- site__footer-copywriter -->
+            <div class="site__footer-copywriter">© 2016 АГ ФАБЕР ДЕНТАПЛАНТ</div>
+            <!-- /site__footer-copywriter -->
 
-    </footer><!-- /site__footer -->
+            <!-- site__footer-developer -->
+            <div class="site__footer-developer">Создание сайта: <a class="site__footer-link" href="#">Экспресс лаб</a></div>
+            <!-- /site__footer-developer -->
+
+        </div>
+        <!-- /site__footer-layout -->
+
+    </footer>
+    <!-- /site__footer -->
 
 </div><!-- /site -->
 
