mobile page start1

--- a/app/index.html
+++ b/app/index.html
@@ -388,6 +388,13 @@
     </div>
     <!-- /site__content -->
 
+    <!-- site__location -->
+    <address class="site__location">
+        <a class="site__location-town" href="#">Уфа, ул. Энтузиастов, д. 6А</a>
+        <a class="site__location-mail" href="#">contact@agf-clinica.ru​</a>
+    </address>
+    <!-- /site__location -->
+
     <footer class="site__footer">
 
         <!-- site__footer-layout -->
@@ -411,7 +418,7 @@
 
 <script src="js/vendors/jquery-2.2.1.min.js"></script>
 <script src="js/vendors/swiper.jquery.min.js"></script>
-<script src="js/jquery.main.js"></script>
+<script src="js/index.min.js"></script>
 
 </body>
 </html>
