--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
 
         <!-- site__header-tel -->
         <div class="site__header-tel">
-            Многоканальный телефон:
+            <div>Многоканальный телефон:</div>
             <a href="tel:+7347248-30-03">+7 (347) 248 - 30 - 03</a>
             <a href="tel:+7347248-59-09">+7 (347) 248 - 59 - 09</a>
             <span class="site__header-request">Оставить заявку</span>
@@ -410,7 +410,6 @@
 
         </div>
         <!-- /site__footer-layout -->
-
     </footer>
     <!-- /site__footer -->
 
