--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
                                     <div class="slider__title">
                                         <h2>улучшение
                                             контура лица</h2>
-                                    <span>Без осложнений, инфици-
-                                        рования и ускорить процесс</span>
+                                    <span>Без осложнений, инфици - рования и ускорить процесс</span>
                                         <a class="slider__more" href="#">Подробнее</a>
                                     </div>
                                 </div>
@@ -222,8 +221,7 @@
                                     <div class="slider__title">
                                         <h2>улучшение
                                             контура лица</h2>
-                                    <span>Без осложнений, инфици-
-                                        рования и ускорить процесс</span>
+                                    <span>Без осложнений, инфици - рования и ускорить процесс</span>
                                         <a class="slider__more" href="#">Подробнее</a>
                                     </div>
                                 </div>
