desktop finish need jquery standart

--- a/inside.html
+++ b/inside.html
@@ -18,9 +18,12 @@
 <div class="site">
 
     <!-- site__header -->
-    <header class="site__header">
+    <header class="site__header header_inside">
 
-        <h1 class="logo"><img src="img/logo.png" width="" height="" alt=""></h1><!-- /logo -->
+        <h1 class="logo">
+            <img src="img/logo.png" alt="logo">
+            <span>пластическая хирургия</span>
+        </h1><!-- /logo -->
 
         <!-- menu -->
         <nav class="header__menu">
@@ -45,8 +48,8 @@
 
         <!-- site__header-work-time -->
         <div class="site__header-work-time">
-            <span>Будни: 9:00 – 21:00</span>
-            <span>Суббота: 9:00 – 17:00</span>
+            <div>Будни: <span>9:00 – 21:00</span></div>
+            <div>Суббота: <span>9:00 – 17:00</span></div>
         </div>
         <!-- /site__header-work-time -->
 
@@ -293,7 +296,7 @@
     <!-- /site__content -->
 
     <!-- site__location -->
-    <address class="site__location">
+    <address class="site__location location_inside">
         <a class="site__location-town" href="#">Уфа, ул. Энтузиастов, д. 6А</a>
         <a class="site__location-mail" href="#">contact@agf-clinica.ru​</a>
     </address>
