--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 <body>
 
+<!-- btn-up -->
+<span class="btn-up"></span>
+<!-- /btn-up -->
+
 <div class="site">
 
     <!-- site__tabs -->
@@ -35,6 +39,7 @@
     </div>
     <!-- /site__tabs -->
 
+    <!-- site__header -->
     <header class="site__header">
 
         <h1 class="logo">
