--- a/index.html
+++ b/index.html
@@ -101,50 +101,64 @@
                     <!-- aside-menu__btn -->
                     <button class="aside-menu__btn"><span></span>Услуги</button>
                     <!-- /aside-menu__btn -->
+
+                    <!-- aside-menu__title -->
                     <div class="aside-menu__title">Услуги</div>
+                    <!-- /aside-menu__title -->
+
                     <!-- aside-menu__wrap -->
                     <ul class="aside-menu__wrap">
                         <li>
                         <span>Лифтинг лица
                             + SMAS круговая</span>
                             <ul>
+                                <!-- aside-menu__links -->
                                 <li><a class="aside-menu__links" href="#">Увеличение груди</a></li>
                                 <li><a class="aside-menu__links" href="#">Подтяжка груди</a></li>
                                 <li><a class="aside-menu__links" href="#">Уменьшение груди</a></li>
+                                <!-- /aside-menu__links -->
                             </ul>
                         </li>
                         <li>
                             <span>Ринопластика</span>
                             <ul>
+                                <!-- aside-menu__links -->
                                 <li><a class="aside-menu__links" href="#">Увеличение груди</a></li>
                                 <li><a class="aside-menu__links" href="#">Подтяжка груди</a></li>
                                 <li><a class="aside-menu__links" href="#">Уменьшение груди</a></li>
+                                <!-- /aside-menu__links -->
                             </ul>
                         </li>
                         <li>
                             <span>Отопластика</span>
                             <ul>
+                                <!-- aside-menu__links -->
                                 <li><a class="aside-menu__links" href="#">Увеличение груди</a></li>
                                 <li><a class="aside-menu__links" href="#">Подтяжка груди</a></li>
                                 <li><a class="aside-menu__links" href="#">Уменьшение груди</a></li>
+                                <!-- /aside-menu__links -->
                             </ul>
                         </li>
                         <li>
                         <span>3D - коррекция лица
                             филлерами</span>
                             <ul>
+                                <!-- aside-menu__links -->
                                 <li><a class="aside-menu__links" href="#">Увеличение груди</a></li>
                                 <li><a class="aside-menu__links" href="#">Подтяжка груди</a></li>
                                 <li><a class="aside-menu__links" href="#">Уменьшение груди</a></li>
+                                <!-- /aside-menu__links -->
                             </ul>
                         </li>
                         <li>
                         <span>Коррекция молочных
                             желез</span>
                             <ul>
+                                <!-- aside-menu__links -->
                                 <li><a class="aside-menu__links" href="#">Увеличение груди</a></li>
                                 <li><a class="aside-menu__links" href="#">Подтяжка груди</a></li>
                                 <li><a class="aside-menu__links" href="#">Уменьшение груди</a></li>
+                                <!-- /aside-menu__links -->
                             </ul>
                         </li>
                     </ul>
@@ -158,7 +172,11 @@
 
                     <!-- site__title -->
                     <h2 class="site__title">отзывы
+
+                        <!-- reviews__all -->
                         <a class="reviews__all" href="#">Все отзывы</a>
+                        <!-- /reviews__all -->
+
                     </h2>
                     <!-- /site__title -->
 
@@ -220,7 +238,9 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- /swiper-slide -->
 
+                            <!-- swiper-slide -->
                             <div class="swiper-slide">
                                 <div class="slider__layout" style="background-image: url(pic/main-slider.jpg)">
                                     <div class="slider__title">
@@ -231,6 +251,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- /swiper-slide -->
 
                         </div>
                         <!-- /Swiper -->
@@ -600,7 +621,8 @@
     </footer>
     <!-- /site__footer -->
 
-</div><!-- /site -->
+</div>
+<!-- /site -->
 
 <script src="js/jquery-2.2.1.min.js"></script>
 <script src="js/swiper.jquery.min.js"></script>
