--- a/specialist-konkret.html
+++ b/specialist-konkret.html
@@ -219,6 +219,24 @@
             <!-- site__content-wrap -->
             <div class="site__content-wrap">
 
+                <!-- bread-crumbs -->
+                <div class="bread-crumbs">
+
+                    <!-- bread-crumbs__item -->
+                    <a href="#" class="bread-crumbs__item">Главная</a>
+                    <!-- /bread-crumbs__item -->
+
+                    <!-- bread-crumbs__item -->
+                    <a href="#" class="bread-crumbs__item">Специалисты</a>
+                    <!-- /bread-crumbs__item -->
+
+                    <!-- bread-crumbs__item -->
+                    <a href="#" class="bread-crumbs__item">Анжелика Всеволодовна Закаблуковская</a>
+                    <!-- /bread-crumbs__item -->
+
+                </div>
+                <!-- /bread-crumbs -->
+
                 <!-- professional-description -->
                 <div class="description">
 
