--- a/specialisty2.html
+++ b/specialisty2.html
@@ -216,100 +216,120 @@
             </aside>
             <!-- /site__aside -->
 
-            <!-- our-specialists -->
-            <div class="our-specialists">
+            <!-- site__content-wrap -->
+            <div class="site__content-wrap">
 
-                <h2 class="site__title">наши специалисты</h2>
+                <!-- bread-crumbs -->
+                <div class="bread-crumbs">
 
-                <!-- our-specialists__wrap -->
-                <div class="our-specialists__wrap">
+                    <!-- bread-crumbs__item -->
+                    <a href="#" class="bread-crumbs__item">Главная</a>
+                    <!-- /bread-crumbs__item -->
 
-                    <!-- our-specialists -->
-                    <a href="#" class="our-specialists__item">
-                        <div class="our-specialists__pic" style="background-image: url(pic/specialist01.jpg)"></div>
-                        <div class="our-specialists__name">Анжелика Всеволодовна</div>
-                        <div class="our-specialists__surname">ЗАКАБЛУКОВСКАЯ</div>
-                        <div class="our-specialists__position">Главный врач</div>
-                    </a>
-                    <!-- /our-specialists -->
-
-                    <!-- our-specialists -->
-                    <a href="#" class="our-specialists__item">
-                        <div class="our-specialists__pic" style="background-image: url(pic/specialist02.jpg)"></div>
-                        <div class="our-specialists__name">Иван Иванович</div>
-                        <div class="our-specialists__surname">ИВАНОВ</div>
-                        <div class="our-specialists__position">Главный врач</div>
-                    </a>
-                    <!-- /our-specialists -->
-
-                    <!-- our-specialists -->
-                    <a href="#" class="our-specialists__item">
-                        <div class="our-specialists__pic" style="background-image: url(pic/specialist03.jpg)"></div>
-                        <div class="our-specialists__name">Петр Ильич</div>
-                        <div class="our-specialists__surname">МИХАЙЛОВИЧ</div>
-                        <div class="our-specialists__position">Главный врач</div>
-                    </a>
-                    <!-- /our-specialists -->
-
-                    <!-- our-specialists -->
-                    <a href="#" class="our-specialists__item">
-                        <div class="our-specialists__pic" style="background-image: url(pic/specialist01.jpg)"></div>
-                        <div class="our-specialists__name">Анжелика Всеволодовна</div>
-                        <div class="our-specialists__surname">ЗАКАБЛУКОВСКАЯ</div>
-                        <div class="our-specialists__position">Главный врач</div>
-                    </a>
-                    <!-- /our-specialists -->
-
-                    <!-- our-specialists -->
-                    <a href="#" class="our-specialists__item">
-                        <div class="our-specialists__pic" style="background-image: url(pic/specialist02.jpg)"></div>
-                        <div class="our-specialists__name">Иван Иванович</div>
-                        <div class="our-specialists__surname">ИВАНОВ</div>
-                        <div class="our-specialists__position">Главный врач</div>
-                    </a>
-                    <!-- /our-specialists -->
-
-                    <!-- our-specialists -->
-                    <a href="#" class="our-specialists__item">
-                        <div class="our-specialists__pic" style="background-image: url(pic/specialist03.jpg)"></div>
-                        <div class="our-specialists__name">Петр Ильич</div>
-                        <div class="our-specialists__surname">МИХАЙЛОВИЧ</div>
-                        <div class="our-specialists__position">Главный врач</div>
-                    </a>
-                    <!-- /our-specialists -->
-
-                    <!-- our-specialists -->
-                    <a href="#" class="our-specialists__item">
-                        <div class="our-specialists__pic" style="background-image: url(pic/specialist01.jpg)"></div>
-                        <div class="our-specialists__name">Анжелика Всеволодовна</div>
-                        <div class="our-specialists__surname">ЗАКАБЛУКОВСКАЯ</div>
-                        <div class="our-specialists__position">Главный врач</div>
-                    </a>
-                    <!-- /our-specialists -->
-
-                    <!-- our-specialists -->
-                    <a href="#" class="our-specialists__item">
-                        <div class="our-specialists__pic" style="background-image: url(pic/specialist02.jpg)"></div>
-                        <div class="our-specialists__name">Иван Иванович</div>
-                        <div class="our-specialists__surname">ИВАНОВ</div>
-                        <div class="our-specialists__position">Главный врач</div>
-                    </a>
-                    <!-- /our-specialists -->
-
-                    <!-- our-specialists -->
-                    <a href="#" class="our-specialists__item">
-                        <div class="our-specialists__pic" style="background-image: url(pic/specialist03.jpg)"></div>
-                        <div class="our-specialists__name">Петр Ильич</div>
-                        <div class="our-specialists__surname">МИХАЙЛОВИЧ</div>
-                        <div class="our-specialists__position">Главный врач</div>
-                    </a>
-                    <!-- /our-specialists -->
+                    <!-- bread-crumbs__item -->
+                    <a href="#" class="bread-crumbs__item">Специалисты</a>
+                    <!-- /bread-crumbs__item -->
 
                 </div>
-                <!-- /our-specialists__wrap -->
+                <!-- /bread-crumbs -->
 
-            </div>
-            <!-- /our-specialists -->
+                <!-- our-specialists -->
+                <div class="our-specialists">
+
+                    <h2 class="site__title">наши специалисты</h2>
+
+                    <!-- our-specialists__wrap -->
+                    <div class="our-specialists__wrap">
+
+                        <!-- our-specialists -->
+                        <a href="#" class="our-specialists__item">
+                            <div class="our-specialists__pic" style="background-image: url(pic/specialist01.jpg)"></div>
+                            <div class="our-specialists__name">Анжелика Всеволодовна</div>
+                            <div class="our-specialists__surname">ЗАКАБЛУКОВСКАЯ</div>
+                            <div class="our-specialists__position">Главный врач</div>
+                        </a>
+                        <!-- /our-specialists -->
+
+                        <!-- our-specialists -->
+                        <a href="#" class="our-specialists__item">
+                            <div class="our-specialists__pic" style="background-image: url(pic/specialist02.jpg)"></div>
+                            <div class="our-specialists__name">Иван Иванович</div>
+                            <div class="our-specialists__surname">ИВАНОВ</div>
+                            <div class="our-specialists__position">Главный врач</div>
+                        </a>
+                        <!-- /our-specialists -->
+
+                        <!-- our-specialists -->
+                        <a href="#" class="our-specialists__item">
+                            <div class="our-specialists__pic" style="background-image: url(pic/specialist03.jpg)"></div>
+                            <div class="our-specialists__name">Петр Ильич</div>
+                            <div class="our-specialists__surname">МИХАЙЛОВИЧ</div>
+                            <div class="our-specialists__position">Главный врач</div>
+                        </a>
+                        <!-- /our-specialists -->
+
+                        <!-- our-specialists -->
+                        <a href="#" class="our-specialists__item">
+                            <div class="our-specialists__pic" style="background-image: url(pic/specialist01.jpg)"></div>
+                            <div class="our-specialists__name">Анжелика Всеволодовна</div>
+                            <div class="our-specialists__surname">ЗАКАБЛУКОВСКАЯ</div>
+                            <div class="our-specialists__position">Главный врач</div>
+                        </a>
+                        <!-- /our-specialists -->
+
+                        <!-- our-specialists -->
+                        <a href="#" class="our-specialists__item">
+                            <div class="our-specialists__pic" style="background-image: url(pic/specialist02.jpg)"></div>
+                            <div class="our-specialists__name">Иван Иванович</div>
+                            <div class="our-specialists__surname">ИВАНОВ</div>
+                            <div class="our-specialists__position">Главный врач</div>
+                        </a>
+                        <!-- /our-specialists -->
+
+                        <!-- our-specialists -->
+                        <a href="#" class="our-specialists__item">
+                            <div class="our-specialists__pic" style="background-image: url(pic/specialist03.jpg)"></div>
+                            <div class="our-specialists__name">Петр Ильич</div>
+                            <div class="our-specialists__surname">МИХАЙЛОВИЧ</div>
+                            <div class="our-specialists__position">Главный врач</div>
+                        </a>
+                        <!-- /our-specialists -->
+
+                        <!-- our-specialists -->
+                        <a href="#" class="our-specialists__item">
+                            <div class="our-specialists__pic" style="background-image: url(pic/specialist01.jpg)"></div>
+                            <div class="our-specialists__name">Анжелика Всеволодовна</div>
+                            <div class="our-specialists__surname">ЗАКАБЛУКОВСКАЯ</div>
+                            <div class="our-specialists__position">Главный врач</div>
+                        </a>
+                        <!-- /our-specialists -->
+
+                        <!-- our-specialists -->
+                        <a href="#" class="our-specialists__item">
+                            <div class="our-specialists__pic" style="background-image: url(pic/specialist02.jpg)"></div>
+                            <div class="our-specialists__name">Иван Иванович</div>
+                            <div class="our-specialists__surname">ИВАНОВ</div>
+                            <div class="our-specialists__position">Главный врач</div>
+                        </a>
+                        <!-- /our-specialists -->
+
+                        <!-- our-specialists -->
+                        <a href="#" class="our-specialists__item">
+                            <div class="our-specialists__pic" style="background-image: url(pic/specialist03.jpg)"></div>
+                            <div class="our-specialists__name">Петр Ильич</div>
+                            <div class="our-specialists__surname">МИХАЙЛОВИЧ</div>
+                            <div class="our-specialists__position">Главный врач</div>
+                        </a>
+                        <!-- /our-specialists -->
+
+                    </div>
+                    <!-- /our-specialists__wrap -->
+
+                </div>
+                <!-- /our-specialists -->
+
+                </div>
+                <!-- /site__content-wrap -->
 
             <!-- reviews -->
             <div class="reviews">
