--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
                 <!-- reviews -->
                 <div class="reviews">
 
-                    <!-- site__title -->
-                    <h2 class="site__title">отзывы
+                    <!-- index__title -->
+                    <h2 class="index__title">отзывы
 
                         <!-- reviews__all -->
                         <a class="reviews__all" href="#">Все отзывы</a>
                         <!-- /reviews__all -->
 
                     </h2>
-                    <!-- /site__title -->
+                    <!-- /index__title -->
 
                     <!-- reviews__item -->
                     <div class="reviews__item">
@@ -268,10 +268,10 @@
                 <!-- plastic surgery -->
                 <div class="plastic-surgery">
 
-                <!-- site__title -->
-                <h2 class="site__title">пластическая хирургия
+                <!-- index__title -->
+                <h2 class="index__title">пластическая хирургия
                     <span>аг фабер дентаплант</span></h2>
-                <!-- site__title -->
+                <!-- index__title -->
 
                 <p>Повседневная практика показывает, что реализация намеченных плановых заданий требуют определения и уточнения позиций, занимаемых участниками в отношении поставленных задач. Разнообразный и богатый опыт реализация намеченных плановых заданий требуют от нас анализа систем массового участия:</p>
                 <ul>
@@ -288,11 +288,11 @@
                 <!-- photo -->
                 <div class="photo">
 
-                    <!-- site__title -->
-                    <h2 class="site__title">фото «до и после»
+                    <!-- index__title -->
+                    <h2 class="index__title">фото «до и после»
                         <a class="reviews__all" href="#">Все фотографии</a>
                     </h2>
-                    <!-- /site__title -->
+                    <!-- /index__title -->
 
                     <!-- slider -->
                     <div class="photo__slider">
@@ -344,11 +344,11 @@
                 <!-- reviews -->
                 <div class="reviews">
 
-                    <!-- site__title -->
-                    <h2 class="site__title">отзывы
+                    <!-- index__title -->
+                    <h2 class="index__title">отзывы
                         <a class="reviews__all" href="#">Все отзывы</a>
                     </h2>
-                    <!-- /site__title -->
+                    <!-- /index__title -->
 
                     <!-- reviews__item -->
                     <div class="reviews__item">
@@ -389,7 +389,7 @@
             <!-- specialist -->
             <div class="specialist">
 
-                <h2 class="site__title">специалисты</h2>
+                <h2 class="index__title">специалисты</h2>
 
                 <!-- Swiper -->
                 <div class="swiper-container specialist__slider">
@@ -461,17 +461,17 @@
             <!-- news -->
             <div class="news">
 
-                <!-- site__title -->
-                <h2 class="site__title">новости
+                <!-- index__title -->
+                <h2 class="index__title">новости
                     <a class="reviews__all" href="#">Все новости</a>
                 </h2>
-                <!-- /site__title -->
+                <!-- /index__title -->
 
                 <!-- /news__wrap -->
                 <div class="news__wrap">
 
                     <!-- news__item -->
-                    <div class="news__item mobile_show">
+                    <div class="news__item">
 
                         <!-- news__pic -->
                         <div class="news__pic" style="background-image: url(pic/news01.jpg)"></div>
@@ -489,7 +489,7 @@
                     <!-- /news__item -->
 
                     <!-- news__item -->
-                    <div class="news__item">
+                    <div class="news__item display_show">
 
                         <!-- news__pic -->
                         <div class="news__pic" style="background-image: url(pic/news02.jpg)"></div>
@@ -507,7 +507,7 @@
                     <!-- /news__item -->
 
                     <!-- news__item -->
-                    <div class="news__item">
+                    <div class="news__item display_show">
 
                         <!-- news__pic -->
                         <div class="news__pic" style="background-image: url(pic/news03.jpg)"></div>
