--- a/inside.html
+++ b/inside.html
@@ -230,7 +230,7 @@
                 <div class="news__wrap">
 
                     <!-- news__item -->
-                    <div class="news__item mobile_show">
+                    <div class="news__item">
 
                         <!-- news__pic -->
                         <div class="news__pic" style="background-image: url(pic/news01.jpg)"></div>
@@ -248,7 +248,7 @@
                     <!-- /news__item -->
 
                     <!-- news__item -->
-                    <div class="news__item">
+                    <div class="news__item display_show">
 
                         <!-- news__pic -->
                         <div class="news__pic" style="background-image: url(pic/news02.jpg)"></div>
@@ -266,7 +266,7 @@
                     <!-- /news__item -->
 
                     <!-- news__item -->
-                    <div class="news__item">
+                    <div class="news__item display_show">
 
                         <!-- news__pic -->
                         <div class="news__pic" style="background-image: url(pic/news03.jpg)"></div>
