--- a/text.html
+++ b/text.html
@@ -198,22 +198,22 @@
             <!-- site__content-wrap -->
             <div class="site__content-wrap">
 
+                <!-- bread-crumbs -->
+                <div class="bread-crumbs">
+
+                    <!-- bread-crumbs__item -->
+                    <a href="#" class="bread-crumbs__item">Главная</a>
+                    <!-- /bread-crumbs__item -->
+
+                    <!-- bread-crumbs__item -->
+                    <a href="#" class="bread-crumbs__item">Типичная текстовая</a>
+                    <!-- /bread-crumbs__item -->
+
+                </div>
+                <!-- /bread-crumbs -->
+
                 <!-- mn_content -->
-                <div class="mn_content">
-
-                    <!-- bread-crumbs -->
-                    <div class="bread-crumbs">
-
-                        <!-- bread-crumbs__item -->
-                        <a href="#" class="bread-crumbs__item">Главная</a>
-                        <!-- /bread-crumbs__item -->
-
-                        <!-- bread-crumbs__item -->
-                        <a href="#" class="bread-crumbs__item">Типичная текстовая</a>
-                        <!-- /bread-crumbs__item -->
-
-                    </div>
-                    <!-- /bread-crumbs -->
+                <article class="mn_content">
 
                     <h1>H1 Длинный-предлинный заголовок типовой страницы, чтобы настроить интерлиньяж</h1>
 
@@ -299,7 +299,7 @@
 
                     <p><b>Strong. b Равным образом начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки соответствующий условий активизации. Таким образом новая модель организационной деятельности требуют определения и уточнения систем массового участия.</b></p>
 
-                </div>
+                </article>
                 <!-- /mn_content -->
 
             </div>
